# actix-elm-setup

./: .gitignore  README.md  TODO.md  package.json
server/: Cargo.toml
server/.sqlx/: query-037197f73167e5ae63a23b64bd1e9236c12ab3c8a35321ada07c3207d8029b9e.json  query-05e19d6624071d170d86d056c87f45ca111599ebdbc745dc46508f602b40767a.json  query-0c8ce49cb88982387771ba0b0b5297023aa0bef4793f6bb84c0da25807ca002f.json  query-13b7080e504e44bef2ac625ff060dc52c7480a44288cbf974c00a8e4fac114a7.json  query-237aac549c777c33f04691719902fe8c7088ce18a3830438b89cc6ea07cb2434.json  query-24c8a609e80f98f001e248361c3ff86844730131fdfd1166fa8890d3978fba36.json  query-3266bba51b6e5d2d25ee7cebe3c302068a2efb93c88f814df797a210c3634cfc.json  query-3693143b5188e25f365c8b7fa9cc42af69267ce22311af85b8952f73fcae2c4b.json  query-56360ccba0d0de4428b4e8663527f7884c724c96651ec1b4a3abba79ed7d47ec.json  query-8ece7df5da62a1a049107367792bb1b861d299496c1496bab460032537ae6083.json  query-8f79627404abdb8990e1cbfb36251892440b6d3845eba0be3956ea2e9774bd38.json  query-994d1caa12fca79e605e9773fa91394bd56f5be4387c0eca7662383fe1e4619b.json  query-a1434546f7572bd6ae12b3e5f4d73d434067961958065d9d2a84b17945a4bd94.json  query-e9817e61c0aecd5243710f9cf6034540096fd7a71dc8772aa15505eb291dcb33.json  query-eafbb82d92a8af395a96b9f797f92adbe3a2a7efaed19fcfada33bde56286231.json  query-f4438d89bab7d5f0f0855ef371eb4d6a224630d32d9db1c451adf5d3c6756aec.json  query-fed2b7e6fe0d6baa30bd4b353a63be86cbb08c5ae981445ec846a7cec78eaebd.json
server/config/: configuration.json
server/migrations/: 20240716205907_create-account-table.sql  20240717153842_create-session-table.sql  20240721232646_add-lang-to-account.sql
server/sql-migrations/: 0001-login.sql  (+1 more)
(+73 files in other folders)
