[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "actix-elm-setup"


[dependencies]
actix-files = "0.6.6"
actix-web = "4.7.0"
bcrypt = "0.15.1"
env_logger = "0.11.3"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.10.0", features = ["v4"]}
